# server/characterHandler.go
@@ -14,14 +14,12 @@ import (
 )
 
 // @Summary Get characters
-// @Description Get all characters for a movie by movie id use the sort parameter
-// to sort the results by name or height or gender, and the order parameter to order in assending or desending order
-// eg /api/v1/movies/{movie_id}/characters?sort_by=height&filter_by=male&order=descending
+// @Description Get all characters for a movie by movie id use the sort parameter to sort the results by name or height or gender, and the order parameter to order in assending or desending order eg /api/v1/movies/{movie_id}/characters?sort_by=height&filter_by=male&order=descending
 // @Produce  json
-// @Param movie_id query int true "Movie ID"
-// @QueryParam sort_by query string false "Sort by field"
-// @QueryParam order query string false "Order"
-// @QueryParam filter_by query string false "Filter by field"
+// @Param movie_id path int true "Movie ID"
+// @Param sort_by query string false "Sort by field"
+// @Param order query string false "Order"
+// @Param filter_by query string false "Filter by field"
 // @Success 200 {object} []models.Character
 // @Failure 404 {object} models.ApiError
 // @Failure 500 {object} models.ApiError
